--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.4.4
+@version 3.4.5
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -326,17 +326,17 @@
 		color: var(--main-text) !important;
 	}
 
-	html
+	*
 	{
 		scrollbar-color: var(--main-color) scrollbar_track;
 		scrollbar-width: thin;
 	}
 	/*Scrollbar fix for chrome*/
-	html:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
+	*:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
 	{
 		background: var(--main-color);
 	}
-	html:not([hide-scrollbar]) ::-webkit-scrollbar
+	*:not([hide-scrollbar]) ::-webkit-scrollbar
 	{
 		width: scrollbar_width;
 	}
