--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.5.0
+@version 3.5.1
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -537,6 +537,13 @@
 	{
 		background-color: var(--second-background) !important;
 	}
+	ytd-mini-guide-entry-renderer .guide-icon.ytd-mini-guide-entry-renderer,
+	a.ytd-mini-guide-entry-renderer .guide-icon,
+	a.ytd-mini-guide-entry-renderer.title.ytd-mini-guide-entry-renderer,
+	ytd-mini-guide-entry-renderer .title.ytd-mini-guide-entry-renderer
+	{
+		color: var(--main-text) !important;
+	}
 	ytd-mini-guide-entry-renderer[active] .guide-icon.ytd-mini-guide-entry-renderer,
 	a.ytd-mini-guide-entry-renderer:hover .guide-icon,
 	a.ytd-mini-guide-entry-renderer:hover .title.ytd-mini-guide-entry-renderer,
@@ -639,19 +646,33 @@
 	{
 		color: var(--dimmer-text) !important;
 	}
-	.tab-content.paper-tab
+	.tab-content.paper-tab, .tab-content.tp-yt-paper-tab
 	{
 		color: var(--main-text) !important;
 	}
-	paper-tab:hover .tab-content.paper-tab
+	paper-tab:hover .tab-content.paper-tab,
+	tp-yt-paper-tab:hover > .tab-content.tp-yt-paper-tab
 	{
 		color: var(--main-color) !important;
+	}
+	tp-yt-paper-tabs.ytd-c4-tabbed-header-renderer
+	{
+		--paper-tabs-selection-bar-color: var(--main-color) !important;
 	}
 	/*search*/
 	.input-content.paper-input-container label, .input-content.paper-input-container .paper-input-label,
 	#subtitle
 	{
 		color: var(--dimmer-text) !important;
+	}
+	/*arrow button*/
+	iron-icon
+	{
+		fill: var(--main-text) !important;
+	}
+	iron-icon:hover
+	{
+		fill: var(--main-color) !important;
 	}
 	/*side channels*/
 	#title:not([class*="ytd-labs"]):not([class*="upsell-offer"])
@@ -2111,10 +2132,6 @@
 		border-color: var(--hover-background) !important;
 	}
 
-	iron-icon:hover
-	{
-		fill: var(--main-color) !important;
-	}
 	#description-text.ytd-video-renderer
 	{
 		color: var(--dimmer-text) !important;
