--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -1,8 +1,8 @@
 /* ==UserStyle==
 @name YouTube DeepDark Material
-@namespace gitlab.com/RaitaroH/YouTube-DeepDark
+@namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.5.2
+@version 3.5.3
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -655,7 +655,8 @@
 	{
 		color: var(--main-color) !important;
 	}
-	tp-yt-paper-tabs.ytd-c4-tabbed-header-renderer
+	tp-yt-paper-tabs.ytd-c4-tabbed-header-renderer,
+	tp-yt-paper-tabs.ytd-topic-channel-details-renderer
 	{
 		--paper-tabs-selection-bar-color: var(--main-color) !important;
 	}
@@ -704,20 +705,24 @@
 		fill: var(--main-color) !important;
 	}
 	/*community*/
-	#message.ytd-message-renderer, #content-text.ytd-backstage-post-renderer
+	#message.ytd-message-renderer, #content-text.ytd-backstage-post-renderer,
+	#repost-content-text.ytd-shared-post-renderer
 	{
 		color: var(--dimmer-text) !important;
 	}
 	#author-text,
 	.more-button, .less-button,
 	.align-by-text.ytd-backstage-comments-renderer,
-	#toggle.ytd-grid-renderer
+	#toggle.ytd-grid-renderer,
+	#repost-author-text.yt-simple-endpoint.ytd-shared-post-renderer
 	{
 		color: var(--main-text) !important;
 	}
 	.more-button:hover, .less-button:hover,
 	.align-by-text.ytd-backstage-comments-renderer:hover,
-	#toggle.ytd-grid-renderer:hover
+	#toggle.ytd-grid-renderer:hover,
+	#author-text.yt-simple-endpoint.ytd-backstage-post-renderer:hover,
+	#repost-author-text.yt-simple-endpoint.ytd-shared-post-renderer:hover
 	{
 		color: var(--main-color) !important;
 	}
@@ -3216,6 +3221,64 @@
 		color: var(--dimmer-text) !important;
 	}
 	*/
+
+	/*Trending page*/
+	ytd-destination-button-renderer
+	{
+		background-color: var(--hover-background) !important;
+	}
+	#destination-label.ytd-destination-button-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	ytd-destination-button-renderer:hover #destination-label.ytd-destination-button-renderer
+	{
+		color: var(--main-color) !important;
+	}
+	/*more - shown on low width*/
+	ytd-destination-shelf-renderer[is-show-more-visible] #show-more-button.ytd-destination-shelf-renderer,
+	#show-more-button.ytd-destination-shelf-renderer
+	{
+		background: var(--hover-background) !important;
+	}
+	#show-more-button-icon.ytd-destination-shelf-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	ytd-destination-shelf-renderer[is-show-more-visible] #show-more-button.ytd-destination-shelf-renderer:hover #show-more-button-icon.ytd-destination-shelf-renderer
+	{
+		color: var(--main-color) !important;
+	}
+
+	/*Learning*/
+	ytd-carousel-header-renderer
+	{
+		background: var(--main-background) !important;
+	}
+
+	/*Music*/
+	.flex-container.ytd-compact-station-renderer
+	{
+		background-color: var(--second-background) !important;
+	}
+	h3.ytd-compact-station-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	.flex-container.ytd-compact-station-renderer:hover h3.ytd-compact-station-renderer
+	{
+		color: var(--main-color) !important;
+	}
+	#video-count-text.ytd-compact-station-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+
+	/*Gaming*/
+	#live-viewers-count.ytd-game-details-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
 
 	/*History*/
 	yt-formatted-string.ytd-sub-feed-option-renderer
