--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.5.6
+@version 3.5.7
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -1433,6 +1433,7 @@
 	}
 	ytd-menu-service-item-renderer:hover, a.ytd-menu-navigation-item-renderer:hover,
 	tp-yt-paper-listbox.yt-dropdown-menu .iron-selected.yt-dropdown-menu,
+	tp-yt-paper-listbox.yt-dropdown-menu tp-yt-paper-item.yt-dropdown-menu:hover,
 	ytd-menu-service-item-renderer[is-selected]
 	{
 		background: var(--hover-background) !important;
