--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -326,26 +326,26 @@
 		color: var(--main-text) !important;
 	}
 
-	*, html:not(.style-scope)[standardized-themed-scrollbar]
+	*
 	{
-		scrollbar-color: var(--main-color) scrollbar_track;
-		scrollbar-width: thin;
+		scrollbar-color: var(--main-color) scrollbar_track !important;
+		scrollbar-width: thin !important;
 	}
 	/*Scrollbar fix for chrome*/
 	*:not([hide-scrollbar]) ::-webkit-scrollbar-thumb
 	{
-		background: var(--main-color);
+		background: var(--main-color) !important;
 	}
 	*:not([hide-scrollbar]) ::-webkit-scrollbar
 	{
-		width: scrollbar_width;
+		width: scrollbar_width !important;
 	}
 	/*Scrollbar fix for firefox*/
 	::-webkit-scrollbar-track {
-		background: scrollbar_track;
+		background: scrollbar_track !important;
 	}
 	::-webkit-scrollbar-thumb {
-		background: var(--main-color);
+		background: var(--main-color) !important;
 	}
 
 	/*Background for the entire page*/
