--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.5.9
+@version 3.6.0
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -1837,6 +1837,11 @@
 		color: var(--dimmer-text) !important;
 	}
 
+	#container.ytd-playlist-panel-renderer
+	{
+		border-color: transparent !important;
+	}
+
 	/*Playlist creation*/
 	#create-playlist-form .input-content.paper-input-container label
 	{
@@ -2226,9 +2231,19 @@
 	}
 
 	/*SponsorBlock*/
+	#sponsorblockPopup, #sponsorBlockPopupBody, #sponsorBlockPopupContainer
+	{
+		background-color: var(--second-background) !important;
+	}
+	#sponsorBlockPopupContainer
+	{
+		padding-top: 12px !important;
+		margin-bottom: 20px !important;
+	}
 	#sponsorBlockPopupContainer .smallLink
 	{
 		color: var(--main-text) !important;
+		font-size: 13px !important;
 	}
 	#sponsorBlockPopupContainer .smallLink:hover
 	{
