ytd playlist border

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -1839,7 +1839,7 @@
 
 	#container.ytd-playlist-panel-renderer
 	{
-		border-color: transparent !important;
+		border-color: var(--second-background) !important;
 	}
 
 	/*Playlist creation*/
